# Hard-Drive-managment-in-C

./: .directory  .gitignore  CMakeLists.txt  Makefile  README.md  compilar-y-ejecutar.sh  ssdfs  tmp.txt
src/ssdfs/: main.c  os_API.c  os_API.h
src/ssdfs/aux/: auxiliary_fx.c  auxiliary_fx.h  directree.c  directree.h  os_file.c  os_file.h
src/ssdfs/debug/: debug.c  debug.h
src/ssdfs/os_file/: os_file.c  os_file.h
